--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,8 +1,3 @@
-
-.starter-template {
-	padding-top: 20px;
- 	text-align: center;
-}
 .contact-info {
 	margin-top: 20px;
 	//float:right;
